<resources>
    <string name="app_name">Sleep Tracker</string>
    <string name="title_home">Spánok</string>
    <string name="title_dashboard">Štatistika</string>
    <string name="title_notifications">Notifikácie</string>
    <string name="welcomeText">Zvoľte čas v ktorom idete spať a v ktorom sa zobudíte, stlačením na prázdne políčka. Následne stlačte tlačidlo ŠTART. Keď sa zobudíte, stlačte tlačidlo STOP.</string>
    <string name="welcomeTextHeader">Vitajte v aplikácii Sleep Tracker!</string>
    <string name="zaciatokSpanku">Začiatok spánku</string>
    <string name="koniecSpanku">Koniec spánku</string>
    <string name="tlacidloStart">ŠTART</string>
    <string name="tlacidloStop">STOP</string>
    <string name="spanokHint">Zadajte čas</string>
    <string name="dobruNoc">Dobrú noc!</string>
    <string name="spaliSte">Dobré ráno! Spali ste %1$s</string>
    <string name="prosimVyberte">Prosím vyberte čas spánku!</string>
    <string name="vaseSkore">Vaše skóre:</string>
    <string name="vymazatHistoriu">Vymazať históriu</string>
    <string name="historiaNazov">História spánkov</string>
    <string name="warningNazov">Pozor!</string>
    <string name="warningText">Chystáte sa vymazať všetky vaše záznamy o spánkoch. Táto operácia je nevratná. Ste si istý?</string>
    <string name="warningVymazat">Vymazať</string>
    <string name="warningZrusit">Zrušiť</string>
    <string name="notifikacieSwitch">Notifikácie</string>
    <string name="predSpanim">Pred spaním:</string>
    <string name="poZobudeni">Po zobudení:</string>

    <string-array name="casy">
        <item>Žiadne</item>
        <item>5 minút</item>
        <item>10 minút</item>
        <item>15 minút</item>
        <item>20 minút</item>
    </string-array>
</resources>